<resources>

    <string name="check">확인</string>

    <string name="app_name">반식이</string>
    <string name="app_name_eng">Bansikee</string>
    <string name="title_sub">내 옆의 반려식물, 반식이</string>
    <string name="forgot_password">비밀번호를 잊으셨나요?</string>
    <string name="sign_up">회원가입</string>
    <string name="login">로그인</string>
    <string name="kakao_login">카카오톡으로 로그인</string>
    <string name="login_kakao">카카오톡으로 로그인</string>
    <string name="login_google">구글로 로그인</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="error_email">이메일 오류</string>
    <string name="error_password">비밀번호 오류</string>
    <string name="nickname">닉네임</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="pls_write_email">이메일을 입력하세요!</string>
    <string name="pls_write_password">비밀번호를 입력해주세요!</string>
    <string name="pls_write_nickname">닉네임을 입력해주세요!</string>
    <string name="password_not_same">비밀번호가 일치하지 않습니다!</string>

    <string formatted="false" name="divider_format">%d/%d</string>
    <string name="next">다음</string>
    <string name="finished">완료</string>
    <string name="nickname_duplicated">중복된 닉네임입니다!</string>
    <string name="nickname_veryfied">사용 가능한 닉네임입니다.</string>
    <string name="check_nickname_pls">닉네임을 다시 입력해주세요!</string>
    
    <string name="startWithBansikee">반식이랑 시작하기</string>
    <string name="add_to_my_plants">내 식물로 등록하기</string>
    <string name="plant_info">식물 정보</string>
    <string name="management_info">관리 정보</string>
    <string name="management_level">관리수준</string>
    <string name="plant_height">생장 높이</string>
    <string name="plant_width">생장 넓이</string>
    <string name="length_cm_format">%d cm</string>
    <string name="growth_speed">생장 속도</string>
    <string name="smell">향기</string>
    <string name="plant_temperature">생육 온도</string>
    <string name="water_terms">물주기</string>
    <string name="water_terms_format">평상시: %s\n동절기: %s</string>
    <string name="sunlight">햇빛 광도</string>
    <string name="plant_area">배치 장소</string>
    <string name="menu_home">홈</string>
    <string name="menu_my_garden">나의 정원</string>
    <string name="menu_encyclopedia">식물사전</string>
    <string name="menu_my_page">마이페이지</string>
    <string name="search_hint">궁금한 식물 정보를 검색해보세요.</string>
    <string name="format_encyclopedia_recommendations">%s님을 위한 추천식물</string>
    <string name="recent_search">최근 검색</string>
    <string name="delete_all">모두 삭제</string>
    <string name="none">없음</string>
    <string name="onboarding_for_recommendations">추천 식물을 알아보려면\n여기를 눌러주세요!</string>
    <string name="no_recommendation">추천 식물이 없습니다!\n다시 하시려면 여기를 눌러주세요!</string>
    <string name="format_onboarding_recommendation">%s님과 잘 어울리는\n반려식물들을 보여드려요.</string>
    <string name="recommendation_sub_comment">나에게 맞는 식물들을 살펴보고 등록해보세요.</string>
    <string name="format_none_searching_results">\&apos;%s\&apos;에 대한 검색결과가 없습니다!</string>

    <!-- Ted Permission -->
    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>
    <string name="get_photo_from">업로드할 이미지 선택</string>
    <string name="upload_image_error">이미지 업로드 오류!\n다시 시도해주세요</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="ask_exit_while_adding">등록을 취소하고 나가시겠습니까?</string>
    <string name="choose_from_album">앨범에서 선택</string>
    <string name="take_photo_from_cam">사진 촬영</string>
    <string name="cancel">취소</string>
    <string name="hint_my_plant_introduction">내 반려식물을 소개하는 한줄을 자유롭게 작성해보세요.</string>
    <string name="watering_terms">물 주는 주기</string>
    <string name="add_my_plant">내 반려식물 등록하기</string>
    <string name="edit_my_plant">수정하기</string>
    <string name="starting_date">함께하기 시작한 날</string>
    <string name="hint_my_plant_name">반려식물의 이름을 입력해주세요.</string>
    <string name="name">이름</string>
    <string name="simple_plant_introduction">한줄 소개</string>
    <string name="my_garden_sub_info">%s님과 함께하는 반식이들을 보여드려요.</string>
    <string name="search_my_garden_hint">내 정원의 반려식물을 검색해보세요.</string>
    <string name="set_default_image">기본 이미지로 초기화</string>
    <string name="not_have_my_plants">내가 등록한 식물이 없습니다!</string>
    <string name="edit">EDIT</string>
    <string name="go_encyclopedia">백과사전 바로가기</string>
    <string name="raise_my_plant">반려식물 관리하기</string>
    <string name="my_plant_diaries">나의 반려식물 일지</string>
    <string name="write_my_plant_diary">반려식물 일지 작성하기</string>
    <string name="format_plant_diaries">%s의 관리 일지</string>
    <string name="format_d_day">D+%d</string>
    <string name="format_percentage">%d%%</string>
    <string name="format_start_date">%s 부터 함께했어요.</string>
    <string name="alert_delete_my_plant">반식이를 삭제하면 해당 반식이의 일지 등의 모든 정보가 삭제됩니다.\n삭제하시겠습니까?</string>
    <string name="diary_of">의 관리일지</string>
    <string name="weather_today">오늘의 날씨</string>
    <string name="diary_plant_height">식물의 키</string>
    <string name="hint_diary">오늘 내 반려식물에 대한 일기를 자유롭게 적어보세요.</string>
    <string name="write_diary">일기 작성하기</string>
    <string name="question_watered_to_plant">식물에게 물을 줬나요?</string>
    <string name="format_diary_d_day">%d일차</string>
    <string name="format_image_page">%d/%d</string>
    <string name="click_to_add_photos">사진을 추가하려면 여기를 눌러주세요!</string>
    <string name="click_to_add_photos_2">여러 장을 올리려면 앨범을 통해 올려주세요 (최대 5장)!</string>
    <string name="choose_picker_app">앱을 선택해주세요.</string>

    <string name="weather_good">GOOD</string>
    <string name="weather_normal">NORMAL</string>
    <string name="weather_bad">BAD</string>
    <string name="edit_plant_height">내 반식이는 얼마나 컸나요?</string>
    <string name="before_finish_diary">관리일지 작성을 완료하면 해당 기록을 수정할 수 없습니다.\n저장하시겠습니까?</string>
    <string name="alert_delete_my_diary">일지를 삭제하면 그날의 관리 일지에 담긴 기록이 모두 사라집니다.\n삭제하시겠습니까?</string>
    <string name="format_greeting">안녕하세요 %s님,</string>
    <string name="format_last_watered_day">마지막으로 물을 준 날 : %s</string>
    <string name="format_watered_day_to">다음 물 주는 날까지 D-%d</string>
    <string name="write_diary_today">오늘의 식물 일지 작성하기</string>
    <string name="todays_recommendation">오늘의 추천 식물</string>
    <string name="view_more">더보기</string>
    <string name="find_my_recommendations">나에게 맞는 식물 찾아보기</string>
    <string name="none_in_my_garden">등록한 반식이가 없습니다!\n반식이를 추가하려면 여기를 누르세요</string>
    <string name="water_to_my_plant">반식이에게 물을 주세요!</string>
    <string name="ask_deleting_searched_plants">검색기록을 모두 삭제하시겠습니까?</string>
    <string name="ask_deleting_searched_plant">해당 검색기록을 삭제하시겠습니까?</string>
    <string name="user_info">회원정보</string>
    <string name="edit_user_info">회원정보 수정</string>
    <string name="liked_plants">저장된 식물</string>
    <string name="notification">푸시알림</string>
    <string name="watering_notification">물주기 푸시알림</string>
    <string name="edit_user_info_finish">회원정보 수정 완료</string>
    <string name="ask_exit_while_editing">수정을 취소하고 나가시겠습니까?</string>
    <string name="ask_finish_editing">이 회원정보로 수정하시겠습니까?</string>

    <string name="format_liking_plants">%s님이 찜한 식물들입니다.</string>
    <string name="none_liking_plants">찜한 식물이 없습니다!</string>
    <string name="logout">로그아웃</string>
    <string name="withdrawal">회원 탈퇴</string>
    <string name="ask_before_logout">로그아웃하시겠습니까?</string>
    <string name="notice_withdrawal">회원탈퇴를 하시면 기존 회원정보와 반식이에 대한 기록까지 삭제됩니다.\n\n탈퇴하시겠습니까?</string>
    <string name="logout_finished">로그아웃 완료</string>
    <string name="set_default_image_all">모든 이미지 초기화</string>
    <string name="filter_popularity">인기순</string>
    <string name="filter_name">이름순</string>
    <string name="on_back_pressed">뒤로가기를 한 번 더 누르면 앱이 종료됩니다.</string>
</resources>