<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.tomasandfriends.bansikee.src.activities.sign_up.SignUpViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_splash">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingBottom="50dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:fontFamily="@font/poppins_bold"
                android:textStyle="bold"
                android:includeFontPadding="false"
                android:text="@string/app_name_eng"
                android:textColor="@color/title_text"
                android:textSize="36sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:fontFamily="@font/noto_sans"
                android:text="@string/title_sub"
                android:textColor="@color/text_gray"
                android:textSize="13sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                backgroundReactive="@{viewModel.checkNickname}"
                android:hint="@string/nickname"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:textColorHint="@color/text_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.nickname}"
                    android:singleLine="true"
                    android:inputType="textPersonName"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                backgroundReactive="@{viewModel.checkEmail}"
                android:hint="@string/email"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:textColorHint="@color/text_gray"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.email}"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                backgroundReactive="@{viewModel.checkPassword}"
                android:hint="@string/password"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:textColorHint="@color/text_gray"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.password}"
                    android:singleLine="true"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                backgroundReactive="@{viewModel.checkPassword}"
                android:hint="@string/password_check"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:textColorHint="@color/text_gray"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.passwordCheck}"
                    android:singleLine="true"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:onClick="@{()->viewModel.signUp()}"
                android:gravity="center"
                android:paddingVertical="15dp"
                android:background="@drawable/btn_green"
                android:fontFamily="@font/noto_sans_bold"
                android:textStyle="bold"
                android:text="@string/sign_up"
                android:textSize="14sp"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</layout>
