<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.tomasandfriends.bansikee.src.activities.login.LoginViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".src.activities.main.MainActivity">

<!--        splash screen-->
        <LinearLayout
            android:id="@+id/ll_splash"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            fadeVisibility="@{viewModel.splash}">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:textStyle="bold"
                android:text="@string/app_name_eng"
                android:textColor="@color/title_text"
                android:textSize="27.3sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingHorizontal="35dp"
            fadeVisibility="@{!viewModel.splash}">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:fontFamily="@font/poppins_bold"
                android:textStyle="bold"
                android:includeFontPadding="false"
                android:text="@string/app_name_eng"
                android:textColor="@color/title_text"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/tv_title_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:fontFamily="@font/noto_sans"
                android:text="@string/title_sub"
                android:textColor="@color/text_gray"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tf_email"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    backgroundReactive="@{viewModel.checkEmail}"
                    android:hint="@string/email"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    android:textColorHint="@color/text_gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.email}"
                        android:singleLine="true"
                        android:inputType="textEmailAddress"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tf_pw"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    backgroundReactive="@{viewModel.checkPassword}"
                    android:hint="@string/password"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    android:textColorHint="@color/text_gray"
                    app:passwordToggleEnabled="true"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_pw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:text="@={viewModel.password}" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.inAppLogin()}"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:paddingVertical="15dp"
                    android:background="@drawable/btn_green"
                    android:fontFamily="@font/noto_sans_bold"
                    android:textStyle="bold"
                    android:text="@string/login"
                    android:textSize="14sp"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:id="@+id/ll_below_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv_btn_find_pw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:fontFamily="@font/noto_sans"
                        android:text="@string/forgot_password"
                        android:textColor="@color/text_gray"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="/"
                        android:textColor="@color/text_gray" />

                    <TextView
                        android:id="@+id/tv_btn_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{()->viewModel.goSignUp()}"
                        android:padding="5dp"
                        android:fontFamily="@font/noto_sans"
                        android:text="@string/sign_up"
                        android:textColor="@color/text_gray"
                        android:textSize="12sp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line_social_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/light_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:fontFamily="@font/noto_sans"
                    android:text="간편 로그인"
                    android:textColor="@color/light_gray"
                    android:textSize="12sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/light_gray" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/btn_login_kakao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_kakao"
                android:onClick="@{()->viewModel.kakaoLoginClick()}"
                android:orientation="horizontal"
                android:paddingHorizontal="24dp"
                android:paddingVertical="14dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/kakao_account_logo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:text="@string/login_kakao"
                        android:textColor="@color/text_black" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_login_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:background="@drawable/btn_google"
                android:onClick="@{()->viewModel.googleLoginClick()}"
                android:orientation="horizontal"
                android:paddingHorizontal="24dp"
                android:paddingVertical="14dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerInParent="true">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="22dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/google_account_logo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:text="@string/login_google"
                        android:textColor="@color/text_black"  />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
