<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.tomasandfriends.bansikee.src.activities.onboarding.SurveyResultViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingHorizontal="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/ic_back"
                android:onClick="@{()->viewModel.goBack()}"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/poppins_bold"
                android:textStyle="bold"
                android:includeFontPadding="false"
                android:text="@string/app_name_eng"
                android:textColor="@color/title_text"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="30dp"
            android:text="@{String.format(@string/format_onboarding_recommendation, viewModel.userName)}"
            android:textColor="@color/text_black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/noto_sans_bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"
            android:textColor="@color/text_gray"
            android:textSize="14sp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/recommendation_sub_comment"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:paddingHorizontal="30dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="40dp"
                    android:visibility="@{viewModel.surveyResultLoading ? View.VISIBLE: View.GONE}"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="10dp"
                    android:clipToPadding="false"
                    plantItems="@{viewModel.surveyResultItems}"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="40dp"
                    android:visibility="@{!viewModel.surveyResultLoading &amp;&amp; (viewModel.surveyResultItems.empty || viewModel.surveyResultItems == null) ? View.VISIBLE : View.GONE}"
                    android:gravity="center"
                    android:onClick="@{()->viewModel.onBoardAgain()}"
                    android:textSize="20sp"
                    android:fontFamily="@font/noto_sans_bold"
                    android:text="@string/no_recommendation"/>
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/btn_round_green_dark"
                android:gravity="center"
                android:onClick="@{()->viewModel.finish()}"
                android:textColor="@color/white"
                android:fontFamily="@font/noto_sans_bold"
                android:paddingVertical="20dp"
                android:textSize="16sp"
                android:text="@{viewModel.onBoarded ? @string/check : @string/startWithBansikee}"/>
        </LinearLayout>
    </LinearLayout>
</layout>
